--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
+
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+
     testCompile 'junit:junit:4.12'
 }
