--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.jakewharton:butterknife:8.5.1'
 
+    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
+
     testCompile 'junit:junit:4.12'
 }
